# fedbiomed

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODING.md  CODING_RULES.md  CONTRIBUTING.md  CREDIT.md  Dockerfile-hub  Dockerfile-notebook  FlambyDataset.ipynb  LICENSE.md  MODIFICATION.md  README.md  RELEASE.md  docker-compose.yml  hatch_build.py  mkdocs.yml  pyproject.toml  pyproject_poetry.toml  requirements.txt  test_dummy.py  tox.ini  udp_server.py
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md  issue_template.yaml
.github/actions/: get-coverage-rate.yml
.github/workflows/: README.md  build-and-deploy-documentation.yml  build-and-deploy.yml  build-test-all-py-versions.yml  build-test.yml  codespell.yml  dependency-environment-probe.yml  deploy.yml  doc-github-io-main-build.yml  doc-github-io-version-build.yml  doc-test.yml  docker-build-test.yml  docker-deploy.yml  end-to-end.yml  end_to_end_tests.yml  endurance-tests.yml  fbm-generic-test.yml  flamby-tests.yml  nightly-tests-ubuntu.yml  package-compatibility.yml  python-compatibility.yml  test-docker.yml  test-fedbiomed-github-io.yml  test.yml
.gitlab/issue_templates/: Default.md
.gitlab/merge_request_templates/: Default.md  template.md
MP-SPDZ/: README.md  build_shamir_2048bits  generate_sk.py  longprime  server_key.mpc
credit/: mp-spdz-licence.txt
docker/: Dockerfile.base  Dockerfile.node  Dockerfile.node-gpu  Dockerfile.researcher  entrypoint.node.bash  entrypoint.researcher.bash  functions.bash  supervisord-node.conf.template
docker/base/: Dockerfile  entrypoint-base.sh  functions.bash
docker/node/: Dockerfile  entrypoint.bash  entrypoint.sh  supervisord-node-api.conf.template  supervisord-node-gui.conf.template  supervisord-node.conf.template
docker/node-gpu/: Dockerfile  before-entrypoint-hook.sh
docker/node-gui/: Dockerfile  entrypoint-root.sh  entrypoint.bash  entrypoint.sh  nginx.conf  nginx.conf.template
docker/researcher/: Dockerfile  entrypoint.bash  entrypoint.sh
docs/: SECURE_FA_IMPLEMENTATION.md  docs.md  index.md
docs/developer/: ci.md  definition-of-done.md  development-environment.md  docker-images.md  federated-analytics.md  index.md  managing_nodes.md  messaging.md  security-logging.md  testing-in-fedbiomed.md  troubleshooting.md  usage_and_tools.md
docs/getting-started/: basic-example.md  configuration.md  fedbiomed-architecture.md  fedbiomed-workflow.md  getting-started.md  installation.md  what-is-fedbiomed.md
docs/news/: CAL_oncology.md  CHB.md  OSE-2022.md  Release-01-2022.md  Release-01-2023.md  Release-02-2022.md  Release-02-2025.md  Release-04-2023.md  Release-05-2022.md  Release-05-2024.md  Release-09-2024.md  Release-11-2022.md  Release-11-2024.md  Release-12-2023.md  index.md  (+4 more)
docs_src/: fedbiomed_dev_usage_issues.odg  fedbiomed_matrix_native.odg  fedbiomed_matrix_vpn.odg
examples/: secure_federated_analytics_example.py
fedbiomed/: __init__.py  cli.py  demonstrator.py  demonstrator_csv.py  demonstrator_custom_torch.py  demonstrator_imagefolder.py  gui
gui/: config_gui.ini  main.py
nipoppy_example/: README.md  fedbiomed_nipoppy_example.ipynb  nipoppy_data_retriever_example.py
notebooks/: .gitattributes  01_getting-started.ipynb  01_getting-started.py  02_pytorch-celeba-dataset.ipynb  02_pytorch-celeba-dataset.py  02_pytorch-csv-data.ipynb  02_pytorch-csv-data.py  02_pytorch-local-training.ipynb  02_pytorch-used-cars-data.ipynb  02_pytorch-variational-autoencoder.ipynb  04_general-breakpoint-resume-only.ipynb  04_general-breakpoint-save-resume.ipynb  04_general-list-datasets-select-node.ipynb  101_TEMPORARY.ipynb  101_getting-started-2.ipynb  101_getting-started-setup.sh  101_getting-started.ipynb  101_getting-started.py  101_getting-started_jl.ipynb  101_secagg.ipynb  102_getting-started-experiment.ipynb  Data Preprocess Used Cars Dataset.ipynb  Demo-sprint-review-part-1-creating-data-format-file.ipynb  Demo-sprint-review-part-2-data-sanity-check.ipynb  DenseNet-transfer-learning.ipynb  Logistic-Regression-FLamby.ipynb  MEDNIST_DenseNet_Fine_tuned.ipynb  README.md  TEMPO_101_getting-started.ipynb  TEMPO_WIP_fedcombat.ipynb  TEMPO_WIP_fedcombat_sklearn_02_SGD.ipynb  TEMPO_sklearn-perceptron.ipynb  TEST Fed1.ipynb  Test Flamby.ipynb  Transfer-learning_tutorial_usingDenseNet-121.ipynb  Untitled1.ipynb  YoloV5-Transfer-leraning.ipynb  class_miwae_adni.py  class_miwae_traumabase.py  concrete-ml.ipynb  (+119 more)
poc/: README.md
scripts/: CI_build  changelog  choose_docker_compose  clean_node.py  clean_researcher.py  configure_conda  configure_conda.sh  fedbiomed  fedbiomed_certificate  fedbiomed_configure_secagg  fedbiomed_configure_secagg.sh  fedbiomed_environment  fedbiomed_gui  fedbiomed_mpc  fedbiomed_mpc.sh  fedbiomed_mpc_exec.sh  fedbiomed_run  fedbiomed_vpn  lqueue  mqqt_sniffer  mqtt_sniffer  protoc.py  run_end_to_end_all.sh  run_end_to_end_one.sh  run_end_to_end_test  run_end_to_end_tests.sh  run_integration_test  run_integration_tests.sh  run_test_mnist  start_jupyterhub
tests/: .coveragerc  README.md  _test_csvreader.py  base_case.py  base_test_case.py  conftest.py  coverage.py  test_add_database.py  test_additive_ss.py  test_additivess_message.py  test_aggregator.py  test_analytics.py  test_base_training_plan.py  test_certificate_manager.py  test_check_dataset_quailty.py  test_check_dataset_quality.py  test_cli.py  test_common_channel_manager.py  test_common_cli.py  test_common_preproc_fedcombat_wrapper.py  test_common_synchro.py  test_common_utils.py  test_config.py  test_controller.py  test_csv_reader.py  test_csvreader.py  test_custom_dataset.py  test_data_loading_plan.py  test_data_manager.py  test_database.py  test_dataloaders.py  test_dataset_controller_imagefolder.py  test_dataset_controller_mednist.py  test_dataset_controller_mnist.py  test_dataset_controller_tabular.py  test_dataset_manager.py  test_dataset_manager_registry_controllers.py  test_dataset_simple_dataset.py  test_dataset_tabular_dataset.py  test_datasets.py  (+116 more)
(+2522 files in other folders)
